<resources>
    <string name="title">Title</string>
    <string name="food_description">Food Description</string>
    <string name="add_meal">Add Meal</string>
    <string name="menuimage">MealImage</string>
    <string name="removed">ITEM REMOVED!</string>
    <string name="reset">Reset!</string>


    <string-array name="meal_titles">
        <item>Pepperoni Pizza</item>
        <item>Sausage Pizza</item>
        <item>Buffalo Pizza</item>
        <item>Capricciosa Pizza</item>
        <item>Prosciutto and Rocket</item>
        <item>Chicken Pizza</item>
        <item>Margherita Pizza</item>
        <item>Cheese and Garlic Pizza</item>
        <item>Salad Pizza</item>
        <item>Meat Lover Pizza</item>
        <item>Quattro Formaggio</item>
    </string-array>


    <string-array name="meal_info">
        <item>Tasty Pepperoni Pizza</item>
        <item>Yummy Sausage Pizza</item>
        <item>Yummy Buffalo Pizza</item>
        <item>Delicious Capricciosa Pizza</item>
        <item>Yummy Prosciutto and Rocket</item>
        <item>Tasty Chicken Pizza</item>
        <item>Yummy Margherita Pizza</item>
        <item>Tasty Cheese and Garlic Pizza</item>
        <item>Fresh Salad Pizza</item>
        <item>Yummy Meat Lover Pizza</item>
        <item>Yummy Quattro Formaggio</item>
    </string-array>

    <array name="meal_images">
        <item>@drawable/img_pepperoni</item>
        <item>@drawable/img_sausage</item>
        <item>@drawable/img_buffalo_pizza</item>
        <item>@drawable/img_capricciosa</item>
        <item>@drawable/img_prosciutto_and_rocket</item>
        <item>@drawable/img_chicken</item>
        <item>@drawable/img_margherita</item>
        <item>@drawable/img_cheese_and_garlic</item>
        <item>@drawable/img_salad_pizza</item>
        <item>@drawable/img_meatlover</item>
        <item>@drawable/img_quattro_formaggio</item>
    </array>


    <string-array name="meal_detail">
        <item>Add Pepperoni </item>
        <item>Add Sausage Pizza </item>
        <item>Add Buffalo Pizza </item>
        <item>Add Capricciosa Pizza </item>
        <item>Add Prosciutto and Rocket </item>
        <item>Add Chicken Pizza </item>
        <item>Add Margherita Pizza </item>
        <item>Add Cheese and Garlic Pizza </item>
        <item>Add Salad Pizza </item>
        <item>Add Meat Lover Pizza </item>
        <item>Add Quattro Formaggio </item>
    </string-array>

    <array name="appetizer_titles">
        <item>Mozzarella Sticks</item>
        <item>Garlic Knots</item>
        <item>Buffalo Wings</item>
    </array>

    <array name="appetizer_images">
        <item>@drawable/mozzarella_sticks</item>
        <item>@drawable/garlic_knots</item>
        <item>@drawable/buffalo_wings</item>
    </array>


    <string name="app_name">Pizza Planet App</string>
    <string name="pizza_and_beyond">TO PIZZA AND BEYOND!</string>
    <string name="fab_desc">takes user to cart</string>
    <string name="pizzaplanetbanner">pizzaPlanetBanner</string>
    <string name="tv_emptyCart_text">Shopping Cart Is Empty</string>
    <string name="btn_return_menu_text">Return To Menu</string>
    <string name="iv_emptyCart_text">emptyCart</string>
    <string name="shopping_cart_fab_desc">fab to complete order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="video_header">Video Intro Configuration</string>
    <string name="address_header">Address Configuration</string>
    <string name="contact_header">Contact Configuration</string>

    <!-- Messages Preferences -->
    <string name="default_contact">Default Contact</string>
    <string name="video_title">Default Video</string>
    <string name="address_title">Default Address</string>
    <string name="pizza_planet_address">Pixar Animation Studios 1200 Park Avenue Emeryville, California 94608</string>

    <!--    Pizza Fragment-->
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="sausage_pizza">Sausage Pizza</string>
    <string name="buffalo_pizza">Buffalo Pizza</string>
    <string name="capricciosa_pizza">Capricciosa Pizza</string>
    <string name="bacon_pizza">Bacon Pizza</string>
    <string name="chicken_pizza">Chicken Pizza</string>
    <string name="prosciutto_and_rocket">Prosciutto and Rocket</string>
    <string name="margherita_pizza">Margherita Pizza</string>

    <!--    Appetizer Fragment-->
    <string name="mozzarella_sticks">Mozzarella Sticks</string>
    <string name="garlic_knots">Garlic Knots</string>
    <string name="buffalo_wings">Buffalo Wings</string>

    <!--    Beverages Fragment-->
    <string name="coca_cola">Coca Cola</string>
    <string name="water">Water</string>
    <string name="sprite">Sprite</string>
    <string name="pepsi">Pepsi</string>
    <string name="iced_tea">Iced Tea</string>

    <!--    Cart Item -->
    <string name="cartItem_MealImageDesc">picture of the meal</string>
    <string name="cartMealName_default">meal name placeholder</string>
    <string name="cartMealPrice_default">price text placeholder</string>

    <!--    Order Item-->
    <string name="orderNameTV_default">meal name placeholder</string>
    <string name="orderPriceTV_default">price text placeholder</string>

    <!--    Cart Shopping -->
    <string name="shopping_cartTV_default">Shopping Cart</string>
    <string name="shopCartTotalTV_defaultText">Total:</string>
    <string name="shopCartPriceTV_defaultText">$000</string>

    <!--    Order Complete-->
    <string name="orderComplete_logoDesc">Logo</string>
    <string name="orderBanner_defaultText">Order Complete</string>
    <string name="orderItemLabel_default">Items:</string>
    <string name="orderPriceLabel_default">Price:</string>
    <string name="orderTotalItemLabel_defaultText">Total Items:</string>
    <string name="orderTotalIeam_countPlaceHolder">Zero</string>
    <string name="orderTotalPriceLabel_default">Total Price:</string>
    <string name="orderPrice_placeholder">$00</string>
    <string name="order_btnMoreInfo_defaultText">More Info</string>
    <string name="order_btnCallStore_defaultText">Call Store</string>
    <string name="deafult_priceText">$000</string>
    <string name="appetizer_btn_defaultText">Details</string>
    <string name="beverages_btn_defaultDetailText">Details</string>
    <string name="beverages_Descript">logo_beverages</string>


</resources>