<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/pizzaPlanetLogo"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:scaleType="centerCrop"
            android:src="@drawable/stretchedpizza"
            android:contentDescription="@string/pizzaplanetbanner"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cartTV_default"
            android:textStyle="bold|italic"
            android:textSize="@dimen/shoppingCartTV_defaultTextSize"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/red"
            />

    </LinearLayout>


    <include
        layout="@layout/cart_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout"
        android:layout_marginTop="@dimen/ShoppingCart_IncludeMargin"
        android:layout_above="@id/priceLayoutCart"/>



    <LinearLayout
        android:id="@+id/priceLayoutCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shoppingCartBottomMargin_default"
            android:text="@string/shopCartTotalTV_defaultText"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:textSize="@dimen/shoppingCart_defaultTextSize"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/shoppingCartTotalTV_endMargin"
            />

        <TextView
            android:id="@+id/totalPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shoppingCartBottomMargin_default"
            android:text="@string/shopCartPriceTV_defaultText"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/shoppingCart_defaultTextSize"
            android:textStyle="bold|italic"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/completeOrderFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/shopping_cart_fab_desc"
        android:src="@drawable/ic_action_orderdone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>