<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pizzaPlanet"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/pizzaplanetbanner"
        android:scaleType="centerCrop"
        android:src="@drawable/stretchedpizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


       <ImageView
        android:id="@+id/emptyCartLogo"
        android:layout_width="202dp"
        android:layout_height="207dp"
        android:layout_below="@+id/pizzaPlanet"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/iv_emptyCart_text"
        android:src="@drawable/emptyshoppingcart"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaPlanet" />

    <TextView
        android:id="@+id/tv_emptyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emptyCartLogo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/tv_emptyCart_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyCartLogo" />

    <Button
        android:id="@+id/btn_return_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_emptyCart"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:onClick="ReturnToMenu"
        android:text="@string/btn_return_menu_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emptyCart" />


</androidx.constraintlayout.widget.ConstraintLayout>



